2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c, gnome-druid.c, gnome-font-picker.c,
	gnome-helpsys.c: Use the GTK+ API to access our stock icons.

	* gnome-stock-icons.h: New file; provide #defines for all
	our stock ids.

	* gnome-init.c (libgnomeui_post_args_parse): Call
	init_gnome_stock_icons().

	* gnome-stock.[ch], gnome-stock-ids.[ch]: Removed.

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-textfu.c (gnome_textfu_parse): Use stat(), not fstat();
	[FIXME: for some strange reason, fstat() is an undefined symbol
	on my system.]

2001-04-29  Martin Baulig  <baulig@suse.de>

	* gnome-stock-icons.c: New file; we'll most likely move all
	the icons from the pixmaps/ directory into GTK+ very soon,
	this file is the first step in this direction.
	(init_gnome_stock_icons): This function puts all our icons into
	a new GtkIconFactory and gtk_icon_factory_add_default()s it.

	* gnome-stock-ids.h (GNOME_ICON_SIZE_TOOLBAR): New icon size.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c: Use GtkImageMenuItem, not GtkPixmapMenuItem.

	* gtkpixmapmenuitem.[ch]: Removed.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-file-saver.[ch]: Removed.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-file-selector-dialog.h: Removed; this file was never
	really used.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-app-util.[ch], gnome-dialog-util.[ch], gnome-dialog.[ch],
	gnome-messagebox.[ch], gnome-propertybox.[ch], gnome-scores.[ch]:
	Removed; they are already in libcompat, but now all code which was
	still using them is fixed.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* libgnomeui.h: Don't Include gnome-app-helper.h,
	gnome-dialog.h, gnome-dialog-util.h, gnome-messagebox.h,
	gnome-propertybox.h and gnome-scores.h.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-stock.c: Comment out everything which was using code from
	gnome-messagebox.[ch] and gnome-propertybox.[ch].
